# motosan-agent-primitives

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  M10_DISPATCH_PROMPTS.md  M10_PLAN.md  M8_5_AGEMO_PLAN.md  M8_6_1_PATH_UNIFICATION_PLAN.md  M8_6_1_PHASE_G_REVISION.md  M8_6_LOOPINTERCEPTOR_REFACTOR_PLAN.md  M8_AUDIT.md  M8_DISPATCH_PROMPTS.md  M8_IMPLEMENTATION_PLAN.md  M9_GATE_DIAGRAM.md  README.md  SUBAGENT_PROMPTS.md
.github/workflows/: ci.yml
docs/: APPROVAL_PI_CODEX_CAPABILITY_STUDY.md  CODEX_ARCHITECTURE_STUDY.md
docs/superpowers/plans/: 2026-05-29-reviewer-approval-seam.md  2026-05-30-task7-batch0-validation.md  2026-05-30-task7-v2-execution-model.md
docs/superpowers/specs/: 2026-05-29-reviewer-approval-seam-design.md
src/: approval.rs  event.rs  hook.rs  lib.rs  memory.rs  message.rs  permission.rs  tool.rs
tests/: fixtures_test.rs
tests/fixtures/content_blocks/: document.json  image_base64.json  image_url.json  text.json  tool_result.json  tool_result_error.json  tool_use.json
