[package]
name = "motosan-agent-primitives"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
description = "Core types and abstract traits for the Motosan agent framework."
license = "Apache-2.0"
repository = "https://github.com/motosan-dev/motosan-agent-primitives"
documentation = "https://docs.rs/motosan-agent-primitives"
readme = "README.md"
keywords = ["agent", "llm", "ai", "framework"]
categories = ["api-bindings"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
# tokio-util's `CancellationToken` lives in `tokio_util::sync` and is part of
# the default (featureless) build — there is no `sync` feature to enable.
tokio-util = { version = "0.7", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }

[features]
default = []
